<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detalle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fdanielpm.captureapp.DetalleActivity">

    <TextView
        android:text="@string/confirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/tvConfirmar"
        android:textStyle="normal|bold"
        android:textSize="@dimen/title" />

    <TextView
        android:text="@string/capture_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvConfirmar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:textSize="@dimen/datos"
        android:id="@+id/tvNombre" />

    <TextView
        android:text="@string/capture_fecha_nacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/tvFechaNacimiento"
        android:layout_below="@+id/tvNombre"
        android:layout_alignParentStart="true" />


        <TextView
            android:text="@string/capture_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvFechaNacimiento"
            android:layout_alignParentStart="true"
            android:layout_marginTop="14dp"
            android:id="@+id/tvTelefono" />
    <TextView
        android:text="@string/capture_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTelefono"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp"
        android:id="@+id/tvEmail" />

    <TextView
        android:text="@string/capture_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEmail"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:id="@+id/tvDescripcion" />

        <LinearLayout
            android:layout_below="@id/tvDescripcion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/btn_padding"
            android:paddingRight="@dimen/btn_padding">

            <Button
                android:text="@string/btn_editar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnEditar"
                android:layout_weight="1" />
        </LinearLayout>


</RelativeLayout>
